fix for missing space between adult and children in booking bar on mobile

--- a/src/styles/views/floating-bar.less
+++ b/src/styles/views/floating-bar.less
@@ -264,8 +264,7 @@ floating-bar {
                     text-align: left;
                     > div{
                       float: left;
-                      & + div{
-                        display: inline-block;
+                      .adult {
                         margin-right: 10px;
                       }
                     }
